Some docs improvements Activate a cluster after being created interactively. Update build machinery Fix a bug where the ~/.kube dir was not created Some debug messages

--- a/data/meson.build
+++ b/data/meson.build
@@ -1,7 +1,25 @@
-app_id = 'com.github.inercia.k3dv'
+app_id = 'com.github.inercia.k3x'
+
+################################################
+# icon
+################################################
+
+# NOTE: make sure this path matches APP_ICON_PATH in config.py
+icondir = join_paths('icons', 'hicolor', '128x128', 'apps')
+
+install_data(
+  join_paths(icondir, '@0@.svg'.format(app_id)),
+  install_dir: join_paths(get_option('datadir'), icondir),
+)
+
+################################################
+# desktop file
+################################################
 
 desktop_conf = configuration_data()
-desktop_conf.set('icon', app_id)
+desktop_conf.set('ICON', app_id)
+desktop_conf.set('APP_ID', app_id)
+desktop_conf.set('VERSION', meson.project_version())
 
 desktop_file = i18n.merge_file(
   input: configure_file(
@@ -23,9 +41,13 @@ if desktop_utils.found()
   )
 endif
 
+################################################
+# Appdata file
+################################################
+
 appstream_file = i18n.merge_file(
-  input: 'com.github.inercia.k3dv.appdata.xml.in',
-  output: 'com.github.inercia.k3dv.appdata.xml',
+  input: 'com.github.inercia.k3x.appdata.xml.in',
+  output: 'com.github.inercia.k3x.appdata.xml',
   po_dir: '../po',
   install: true,
   install_dir: join_paths(get_option('datadir'), 'appdata')
@@ -38,7 +60,11 @@ if appstream_util.found()
   )
 endif
 
-install_data('com.github.inercia.k3dv.gschema.xml',
+################################################
+# GSchema file
+################################################
+
+install_data('com.github.inercia.k3x.gschema.xml',
   install_dir: join_paths(get_option('datadir'), 'glib-2.0/schemas')
 )
 
@@ -49,9 +75,3 @@ if compile_schemas.found()
   )
 endif
 
-# NOTE: make sure this path matches the one for "prepare_icon()"
-icondir = join_paths('icons', 'elementary', 'apps', 'scalable')
-install_data(
-  join_paths(icondir, '@0@.svg'.format(app_id)),
-  install_dir: join_paths(get_option('datadir'), icondir),
-)
