--- a/src/meson.build
+++ b/src/meson.build
@@ -1,30 +1,43 @@
-app_id = 'com.github.inercia.k3dv'
+app_id = 'com.github.inercia.k3x'
 pkgdatadir = join_paths(get_option('prefix'), get_option('datadir'), meson.project_name())
-moduledir = join_paths(pkgdatadir, 'k3dv')
+moduledir = join_paths(pkgdatadir, 'k3x')
+
+#########################################################
+# resources
+#########################################################
+
 gnome = import('gnome')
 
-gnome.compile_resources('k3dv',
-  'k3dv.gresource.xml',
+gnome.compile_resources('k3x',
+  'k3x.gresource.xml',
   gresource_bundle: true,
   install: true,
   install_dir: pkgdatadir,
 )
 
-python = import('python')
+#########################################################
+# main executable
+#########################################################
 
+python = import('python')
 conf = configuration_data()
 conf.set('PYTHON', python.find_installation('python3').path())
 conf.set('VERSION', meson.project_version())
+conf.set('PREFIX', get_option('prefix'))
 conf.set('localedir', join_paths(get_option('prefix'), get_option('localedir')))
 conf.set('pkgdatadir', pkgdatadir)
 
 configure_file(
-  input: 'k3dv.in',
-  output: 'k3dv',
+  input: 'k3x.in',
+  output: 'k3x',
   configuration: conf,
   install: true,
   install_dir: get_option('bindir')
 )
+
+#########################################################
+# dependencies
+#########################################################
 
 appindicator_dep = dependency('ayatana-appindicator3-0.1', required: false)
 if appindicator_dep.found()
@@ -44,13 +57,18 @@ elif enable_appindicator == 'ubuntu'
   appindicator_dep = dependency('appindicator3-0.1')
 endif
 
-k3dv_sources = [
+#########################################################
+# install sources
+#########################################################
+
+k3x_sources = [
   '__init__.py',
   'cluster_view.py',
   'config.py',
   'docker.py',
   'helm.py',
   'k3d.py',
+  'k3d_controller.py',
   'keybindings.py',
   'kubectl.py',
   'main.py',
@@ -60,4 +78,4 @@ k3dv_sources = [
   'utils_ui.py',
 ]
 
-install_data(k3dv_sources, install_dir: moduledir)
+install_data(k3x_sources, install_dir: moduledir)
