--- a/meson.build
+++ b/meson.build
@@ -1,4 +1,4 @@
-project('k3dv',
+project('k3x',
           version: '0.1.0',
     meson_version: '>= 0.50.0',
   default_options: [ 'warning_level=2',
