--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,7 @@
 [submodule "shared-modules"]
 	path = shared-modules
 	url = https://github.com/flathub/shared-modules.git
+[submodule "flathub"]
+	path = flathub
+	url = https://github.com/inercia/flathub.git
+	branch = k3x
