--- a/data/com.github.inercia.k3x.desktop.in.in
+++ b/data/com.github.inercia.k3x.desktop.in.in
@@ -1,11 +1,12 @@
 [Desktop Entry]
-Name=k3d
+Name=k3x
 Comment=k3x is a graphical user interface for k3d, making it trivial to have your own local Kubernetes cluster(s)
-Exec=k3x
+Exec=@APP_ID@
 Terminal=false
 Type=Application
 Categories=System;
 StartupNotify=true
 Icon=@ICON@
-X-Flatpak=@APP_IP@
+X-GNOME-UsesNotifications=true
+X-Flatpak=@APP_ID@
 X-Flatpak-Tags=stable;
