Minor fixes for Flathub
* Removed "flathub" as a submodule (was messing with Flathub
build system).
* Fixes in the "pypi-dependencies"

Signed-off-by: Alvaro Saurin <alvaro.saurin@gmail.com>

--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@
 .flatpak-builder
 build
 .vscode
+.idea
 
 # Python
 *.pyc
@@ -10,3 +11,5 @@ __pycache__
 
 /*.xz
 /*.flatpak
+
+build-aux/flatpak-pip-generator
