--- a/data/com.github.inercia.k3x.appdata.xml.in
+++ b/data/com.github.inercia.k3x.appdata.xml.in
@@ -1,67 +1,67 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <component type="desktop">
-	<id>com.github.inercia.k3x.desktop</id>
-	<metadata_license>CC0-1.0</metadata_license>
-	<project_license>MIT</project_license>
-    <name>k3x</name>
-    <developer_name>Alvaro Saurin</developer_name>
-    <categories>
-        <category>Game</category>
-        <category>GTK</category>
-    </categories>
-    <provides>
-        <binary>com.github.inercia.k3x</binary>
-    </provides>
-    <screenshots>
-        <screenshot type="default">
-            <image>https://raw.githubusercontent.com/inercia/k3x/master/docs/screenshots/create-new-dialog-general.png</image>
-        </screenshot>
-        <screenshot>
-            <image>https://raw.githubusercontent.com/inercia/k3x/master/docs/screenshots/create-new-dialog-advanced.png</image>
-        </screenshot>
-    </screenshots>
-	<description>
-        <p>k3x is a graphical user interface for k3d (https://github.com/rancher/k3d), making it trivial to have your own local Kubernetes cluster(s).</p>
-        <p>k3x is perfect for:</p>
+  <id>com.github.inercia.k3x.desktop</id>
+  <metadata_license>CC0-1.0</metadata_license>
+  <project_license>MIT</project_license>
+  <name>k3x</name>
+  <summary>Manager for local Kubernetes clusters with k3d</summary>
+  <developer_name>Alvaro Saurin</developer_name>
+  <categories>
+    <category>Game</category>
+    <category>GTK</category>
+  </categories>
+  <provides>
+    <binary>com.github.inercia.k3x</binary>
+  </provides>
+  <screenshots>
+    <screenshot type="default">
+      <image>https://raw.githubusercontent.com/inercia/k3x/master/docs/screenshots/create-new-dialog-general.png</image>
+    </screenshot>
+    <screenshot>
+      <image>https://raw.githubusercontent.com/inercia/k3x/master/docs/screenshots/create-new-dialog-advanced.png</image>
+    </screenshot>
+  </screenshots>
+  <description>
+    <p>k3x is a graphical user interface for k3d (https://github.com/rancher/k3d), making it trivial to have your own local Kubernetes cluster(s).</p>
+    <p>k3x is perfect solution for:</p>
+    <ul>
+      <li>having a fresh Kubernetes cluster in a couple of seconds.</li>
+      <li>trying new deployments before going in production.</li>
+      <li>learning about Kubernetes.</li>
+    </ul>
+    <p>the k3x project goals are:</p>
+    <ul>
+      <li>to create/switch-to/destroy Kubernetes clusters easily.</li>
+      <li>to drive the most important operations with global keyboard shortcuts.</li>
+      <li>to reduce the learning curve of using Kubernetes.</li>
+    </ul>
+  </description>
+  <releases>
+    <release version="0.1" date="2020-04-17">
+      <description>
+        <p>Fist release!</p>
         <ul>
-          <li>having a fresh Kubernetes cluster in a couple of seconds.</li>
-          <li>trying new deployments before going in production.</li>
-          <li>learning about Kubernetes.</li>
+          <li>Initial release.</li>
         </ul>
-        <p>k3x goals are:</p>
-        <ul>
-          <li>to create/switch-to/destroy Kubernetes clusters easily.</li>
-          <li>to drive the most important operations with global keyboard shortcuts.</li>
-          <li>to reduce the learning curve of using Kubernetes.</li>
-        </ul>
-	</description>
-    <releases>
-      <release version="0.1" date="2020-04-17">
-        <description>
-          <p>Fist release!</p>
-          <ul>
-            <li>Initial release.</li>
-          </ul>
-        </description>
-      </release>
-   </releases>
-    <content_rating type="oars-1.1">
-      <content_attribute id="social-chat">none</content_attribute>
-      <content_attribute id="social-info">none</content_attribute>
-      <content_attribute id="social-audio">none</content_attribute>
-      <content_attribute id="social-location">none</content_attribute>
-      <content_attribute id="social-contacts">none</content_attribute>
-      <content_attribute id="money-purchasing">none</content_attribute>
-      <content_attribute id="money-gambling">none</content_attribute>
-    </content_rating>
-    <url type="homepage">https://github.com/inercia/k3x</url>
-    <url type="bugtracker">https://github.com/inercia/k3x/issues</url>
-    <url type="help">https://github.com/inercia/k3x/issues</url>
-    <update_contact>alvaro.saurin@gmail.com</update_contact>
-    <custom>
-        <value key="x-appcenter-color-primary">#82ffc4</value>
-        <value key="x-appcenter-color-primary-text">#000000</value>
-        <value key="x-appcenter-suggested-price">0</value>
-    </custom>
+      </description>
+    </release>
+  </releases>
+  <content_rating type="oars-1.1">
+    <content_attribute id="social-chat">none</content_attribute>
+    <content_attribute id="social-info">none</content_attribute>
+    <content_attribute id="social-audio">none</content_attribute>
+    <content_attribute id="social-location">none</content_attribute>
+    <content_attribute id="social-contacts">none</content_attribute>
+    <content_attribute id="money-purchasing">none</content_attribute>
+    <content_attribute id="money-gambling">none</content_attribute>
+  </content_rating>
+  <url type="homepage">https://github.com/inercia/k3x</url>
+  <url type="bugtracker">https://github.com/inercia/k3x/issues</url>
+  <url type="help">https://github.com/inercia/k3x/issues</url>
+  <update_contact>alvaro.saurin@gmail.com</update_contact>
+  <custom>
+    <value key="x-appcenter-color-primary">#82ffc4</value>
+    <value key="x-appcenter-color-primary-text">#000000</value>
+    <value key="x-appcenter-suggested-price">0</value>
+  </custom>
 </component>
-
